--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,5 @@
-{
-  "name": "mipath-frontend",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 4173"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.4.0",
-    "typescript": "^5.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "tailwindcss": "^3.4.0"
-  }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
 }
